Backed off mouse over parent/child effects in the navigator tree-view; it's simply too much information to present when the tree-view is semi-expanded as it is currently. The new implementation highlights mouse over essentially and tries to reduce the amount of information. Part of this is effort was to reduce flicker caused by mousing over gaps between menu items created for box-shadows. The box shadows looks really nice but filtering the mouse events is more trouble than it's worth right now so I cut all that out. Just use some fixed-color borders for slight effect, and no margins (thus there's an immediate mouseover for every mouseout on siblings avoiding flashing the parent.

--- a/client/app/css/schema-navigator-window.css
+++ b/client/app/css/schema-navigator-window.css
@@ -10,13 +10,16 @@ opacity: 1.0; z-index: 1;}
 
 
 .classSchemaViewModelNavigatorMenuLevel {
-margin-top: 10px;
-margin-bottom: 0px;
+margin-top: 0px;
+margin-bottom: 0x;
 margin-left: 0px;
 margin-right: 0px;
 font-family: Arial;
+border-top: 1px solid #0099CC;
+border-left: 1px solid #0099CC;
+border-bottom: 1px solid #006699;
+border-right: 1px solid #006699;
 -moz-border-radius: 4px; border-radius: 4px;
-box-shadow: 1px 1px 3px #007777;
 }
 
 .classNavigatorPathWindow {
